Fix z-index

--- a/src/public/styles/modules/sections/left-section.css
+++ b/src/public/styles/modules/sections/left-section.css
@@ -7,6 +7,7 @@
 	grid-template-rows: max-content minmax(0, 1fr) max-content;
 	padding-top: var(--initial-padding-top);
 	max-height: calc(100svh - var(--initial-padding-top));
+	z-index: 1;
 }
 
 @media (width <=1018px) {
